# memo-stack

./: .gitignore  Cargo.toml  README.md  memos.db
src/: app.rs  database.rs  icons.rs  main.rs  models.rs  ui.rs
src/ui/: main_view.rs  memo_item.rs  mod.rs  tabs.rs  theme.rs
